# SDL2_Template

./: CMakeLists.txt  README.md
src/: main.cpp
web/: index.html
